# tele_game_db

./: .coveragerc  .flake8  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  mypy.ini  pyproject.toml  pytest.ini  steam_api_response.json  test_dict.sql
.github/: PULL_REQUEST_TEMPLATE.md
backup_db/: games.example.xlsx  games_with_genres.xlsx
game_db/: MetaCriticScraper.py  __init__.py  bot.py  callback_handlers.py  config.py  constants.py  db.py  db_dictionaries.py  db_excel.py  exceptions.py  genres.py  handlers.py  hltb_client.py  inline_menu.py  logging_config.py  menu.py  menu_callbacks.py  metacritic_search.py  security.py  similarity_search.py  steam_api.py  texts.py  types.py  utils.py
settings/: column_table_names.ini  settings.ini  t_token.example.ini  table_names.ini  users.example.ini  values_dictionaries.ini
tests/: README.md  conftest.py  test_bot.py  test_callback_handlers.py  test_callback_handlers_additional.py  test_callback_handlers_file_sync.py  test_callback_handlers_more.py  test_config.py  test_constants_sentinels.py  test_database_service.py  test_db_dictionaries.py  test_dml_generation.py  test_error_handling.py  test_error_handling_formatters.py  test_error_handling_handlers.py  test_excel_importer_mappings.py  test_excel_reader_writer.py  test_exceptions.py  test_file_commands.py  test_file_safety.py  test_game_commands.py  test_game_service.py  test_game_service_layer.py  test_genres.py  test_handlers.py  test_handlers_additional.py  test_hltb_client.py  test_hltb_formatter.py  test_hltb_synchronizer.py  test_inline_menu.py  test_menu.py  test_message_formatter.py  test_metacritic_formatter.py  test_metacritic_scraper.py  test_metacritic_search.py  test_security.py  (+7 more)
(+43 files in other folders)
